tests/paczka1/fuzzy1/54280434.err
Error in line 2: mHRUSdFehV S704 86,3
Error in line 3: KI2Z3Uux3Aw S480 46,9
Error in line 7: RTVmA9H A850 4,5
Error in line 39: KI2Z3Uux3Aw A850 -3,8
Error in line 34: S480 S480 6,8
